force-app/main/default/objects/sugati__Discount_Config__c/sugati__Discount_Config__c.object-meta.xml
<CustomObject>
    <label>Discount Config</label>
    <nameField>
        <label>Discount Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>