force-app/main/default/objects/sugati__Discount_Config__c/fields/sugati__Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Discount Configs</relationshipLabel>
    <relationshipName>Discount_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>