force-app/main/default/objects/sugati__Discount_Config__c/fields/sugati__Discount_P__c.field-meta.xml
<CustomField>
    <fullName>sugati__Discount_P__c</fullName>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>