force-app/main/default/objects/sugati__Discount_Config__c/fields/sugati__Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__Discount_Value__c</fullName>
    <label>Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>