force-app/main/default/objects/sugati__Discount_Config__c/fields/sugati__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>