force-app/main/default/objects/sugati__Discount_Config__c/fields/sugati__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>