force-app/main/default/objects/sugati__Discount_Config__c/fields/sugati__Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__Notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>