force-app/main/default/objects/sugati__Discount_Config__c/fields/sugati__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Discount Configs</relationshipLabel>
    <relationshipName>Discount_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>