force-app/main/default/objects/sugati__Discount_Config__c/fields/sugati__Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Discount Configs</relationshipLabel>
    <relationshipName>Discount_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>