force-app/main/default/objects/sugati__Discount_Config__c/fields/sugati__Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Component</fullName>
                <default>true</default>
                <label>Component</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>